# fastfile

./: .gitignore  Cargo.toml  Makefile  build.rs
.ci/: azure-pipelines.yml
.github/workflows/: ci.yml
examples/: benchmark.rs  fast_fastread.rs  fast_read.rs  fastfile_fastread.rs  fastfile_read.rs  std-buf_read.rs
fastfile_benches/: Cargo.toml
fastfile_benches/analysis/: Makefile  analyse  fastfile.r  fastfile_read_analysis.rmd  footer.html  individual.tmpl.rmd  individual_density.tmpl.rmd  install.r
fastfile_benches/benches/: macos-fastfile_fastread-nocache-small.rs  macos-fastfile_fastread-nocache-very_small.rs  macos-fastfile_read-nocache-small.rs  macos-fastfile_read-nocache-very_small.rs  macos-fastread-nocache-very_small.rs  macos-std_buf_read-nocache-small.rs  macos-std_buf_read-nocache-very_small.rs  macos.rs  macos_compare_read.rs  macos_compare_read_cache.rs  macos_compare_read_nocache.rs  macos_fastread.rs  macos_fastread_cache.rs  macos_fastread_nocache.rs  macos_read.rs  macos_read_cache.rs  macos_read_nocache.rs
fastfile_benches/results/strudel-baseline/: FastFile Read (NOT cached).csv  FastFile: fastread, NOT cached, very small [1 KiB - 128 KiB].csv  Std: buf_read, NOT cached, very small [1 KiB - 128 KiB].csv
fastfile_benches/src/: benchmark.rs  io.rs  lib.rs  utils.rs
fastfile_benches/src/benches/: methods.rs  mod.rs
fastfile_benches/src/benches/methods/: mod.rs
src/: errors.rs  fastfile.rs  lib.rs
src/os/: macos.rs  mod.rs
src/strategy/: macos.rs  mod.rs
