[package]
name = "fastfile"
version = "0.0.0"
authors = ["Lukas Pustina <lukas@pustina.de>"]
description = "Sequentially read and write files as fast as possible"
categories = ["filesystem"]
keywords = ["performance", "file", "io"]
license = "MIT"
edition = "2018"

[workspace]
members = ["fastfile_benches"]

[lib]
name = "fastfile"
bench = false

[dependencies]
failure = "0.1"
libc = "0.2"
memmap = "0.7"

[dev-dependencies]
spectral = "0.6"
