[package]
name = "fastfile"
version = "0.0.0"
authors = ["Lukas Pustina <lukas@pustina.de>"]
description = "Sequentially read and write files as fast as possible"
categories = ["filesystem"]
keywords = ["performance", "file", "io"]
license = "MIT"

edition = "2018"
build = "build.rs"

[workspace]
members = ["fastfile_benches"]
default-members = ["./", "fastfile_benches"]

[lib]
name = "fastfile"
bench = false

[dependencies]
failure = "0.1"
libc = "0.2"
memmap = "0.7"

[dev-dependencies]
fastfile_benches = { path = "fastfile_benches" }
rand = { version = "0.7", features = ["small_rng"] }
ring = "0.14"
spectral = "0.6"
tempfile = "3"

[profile.release]
debug = true
