[package]
name = "fastfile_benches"
version = "0.0.0"
authors = ["Lukas Pustina <lukas@pustina.de>"]
description = "Benchmarks for fastfile"
edition = "2018"

[lib]
name = "fastfile_benches"

[dependencies]
criterion = "0.2"
fastfile = { path = "../" }
rand = { version = "0.7", features = ["small_rng"] }
ring = "0.14"
tempfile = "3"

[dev-dependencies]
spectral = "0.6"

[[bench]]
name = "macos_fastread"
harness = false

[[bench]]
name = "macos_read"
harness = false

[[bench]]
name = "macos_compare_read"
harness = false
