[package]
name = "fastfile_benches"
version = "0.0.0"
authors = ["Lukas Pustina <lukas@pustina.de>"]
description = "Benchmarks for fastfile"
edition = "2018"

[lib]
name = "fastfile_benches"
bench = false

[dependencies]
byte-unit = "3.0"
fastfile = { path = "../" }
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
libc = "0.2"
rand = { version = "0.7", features = ["small_rng"] }
ring = "0.14"
statrs = "0.11"
tempfile = "3"

[dev-dependencies]
spectral = "0.6"

[[bench]]
name = "macos-std_buf_read-nocache-very_small"
harness = false

[[bench]]
name = "macos-fastfile_fastread-nocache-very_small"
harness = false

[[bench]]
name = "macos-fastfile_read-nocache-very_small"
harness = false
